--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js src/**/*.jsx"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+      "rules": {
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off"
+      }
   },
   "browserslist": {
     "production": [
@@ -47,5 +52,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/university-timetabling"
+  "homepage": "/university-timetabling",
+  "devDependencies": {
+    "eslint": "^8.45.0"
+  }
 }
