--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     ],
       "rules": {
         "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "react-hooks/exhaustive-deps": "off",
+        "default-case": "off"
       }
   },
   "browserslist": {
