--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,9 @@ jobs:
 
     - name: Build
       run: |
+        npm ci
         npm run build
+        # creates a .nojekyll file in the out directory to tell GitHub Pages not to treat the site as a Jekyll project.
         touch build/.nojekyll
 
     - name: Deploy to GitHub Pages
