--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,12 @@
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "npm"
+    directory: "/"
     schedule:
       interval: "monthly"
     assignees:
       - "ozgurakgun"
     groups:
-      all:
+      all-npm-packages:
         patterns:
           - "*"
