--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,35 @@
-name: Deploy to Github Pages
+name: Deploy to the gh-pages branch
 
 on:
   push:
     branches:
-      - main 
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Install Dependencies
-      run: npm install
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 21
+          cache: npm
 
-    - name: Build
-      run: |
-        npm ci
-        npm run build
-        # creates a .nojekyll file in the out directory to tell GitHub Pages not to treat the site as a Jekyll project.
-        touch build/.nojekyll
+      - name: Build
+        run: |
+          npm ci
+          npm run build
+          # creates a .nojekyll file in the out directory to tell GitHub Pages not to treat the site as a Jekyll project.
+          touch build/.nojekyll
 
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4.4.3
-      with:
-        branch: gh-pages                    # Target branch
-        folder: build                       # Folder where the app was output to
-        clean: true                         # Automatically remove old files from the gh-pages branch
-        token: ${{ secrets.GITHUB_TOKEN }}  # GitHub provides this token so the action can push to your repo
+      - name: Deploy to the gh-pages branch
+        uses: JamesIves/github-pages-deploy-action@v4.4.3
+        with:
+          branch: gh-pages
+          folder: build
+          clean: true
