--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^3.5.0"
@@ -35,12 +35,12 @@
       "react-app",
       "react-app/jest"
     ],
-      "rules": {
-        "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off",
-        "react-hooks/exhaustive-deps": "off",
-        "default-case": "off"
-      }
+    "rules": {
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
+      "react-hooks/exhaustive-deps": "off",
+      "default-case": "off"
+    }
   },
   "browserslist": {
     "production": [
