--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
+    "autoprefixer": "^10.4.16",
     "moment": "^2.29.4",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -21,11 +23,13 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
+    "tailwindcss": "^3.3.5",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
+    "build:css": "tailwindcss build src/index.css -o src/styles/output.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js src/**/*.jsx"
