--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "homepage": "/university-timetabling-demo",
   "devDependencies": {
-    "eslint": "^9.16.0"
+    "eslint": "^9.16.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
