Disable all-npm-packages group in dependabot config
Comment out the groups section in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,10 +6,10 @@ updates:
       interval: "monthly"
     assignees:
       - "ozgurakgun"
-    groups:
-      all-npm-packages:
-        patterns:
-          - "*"
+    # groups:
+    #   all-npm-packages:
+    #     patterns:
+    #       - "*"
 
   - package-ecosystem: "github-actions"
     directory: "/"
